working on this stupid image

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/styles.css" />
+    <link rel="stylesheet" href="/styles.css"/>
     <title>Practice More Music</title>
 </head>
 
 <body>
     <header>
         <h1>
-            <a href="/">Practice</a>
+            <!-- <a href="/">Practice</a> -->
         </h1>
     </header>
     
@@ -19,9 +19,14 @@
     <!-- hero section -->
 
     <section class="hero">
-        <div>
+        <div class="hero_content">
+            <img src="./assets/images/practice-violin.jpeg" class="container">
+
+            <h3></h3>
+            <p>Music is a part of my heart, soul, and mind</p>
             
         </div>
     </section>
 </body>
+<script src="script.js"></script>
 </html>
